# CubebertFirmware

./: CMakeLists.txt  LICENSE  README.md
lib/ClawControl/: CMakeLists.txt  claw.cpp  claw.h  grip.cpp  grip.h  rcsp.cpp  rcsp.h  stepper.pio  wrist.cpp  wrist.h
lib/FirmwareIPC/: CMakeLists.txt  command.h  fipc.h  i2c.cpp  i2c.h  uart.cpp  uart.h
